--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
              <span>Curso de desenvolvimento mobile.</span>
             </a>
         </li>
+        <li>
+            <a href="">
+                React JS
+             <span>Curso de desenvolvimento web.</span>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Tutoriais
+             <span>Videos semanais sobre tecnologia.</span>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Consultoria
+             <span>Consultoria para desenvolvimento web.</span>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Orçamentos
+             <span>Solicite orçamentos para sua aplicação.</span>
+            </a>
+        </li>
     </ul>
 
     
